# llm_e2e

./: README.md  corpus-restoration.md  eval.py  pyproject.toml  train.py
config/: gpt2_bert_corpus_gpu.yaml  gpt2_config_cpu.yaml  gpt2_config_gpu_48GB.yaml  gpt2_config_wikipedia_cpu.yaml  gpt2_config_wikipedia_gpu.yaml  gpt2_fineweb-edu_gpu_24GB.yaml  gpt2_fineweb-edu_gpu_48GB.yaml  gpt2_fineweb-edu_morecontext_48GB.yaml
notebooks/: 00_config.ipynb  01_data_pipeline.ipynb  02_gpt2_model.ipynb  03_gpt2_training.ipynb  04_load_openai_gpt2_124M.ipynb  04_load_pretrained_weights.ipynb  05_visualize_attention.ipynb  99_tests.ipynb  gpt2_config.yaml  gpt2_config_cpu.yaml  gpt2_config_gpu_48GB.yaml  gpt2_config_wikipedia_cpu.yaml
src/llm_e2e/: __init__.py  config.py  dataset.py  eval.py  logging.py  model.py  trainer.py
tests/: conftest.py  test_config.py  test_dataset.py  test_integration_streaming_loader.py  test_logging.py  test_model.py  test_trainer.py
