[project]
name = "llm-e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.3",
    "jupyterlab>=4.4.3",
    "pyyaml>=6.0.2",
    "rich-cli>=1.8.0",
    "tensorflow>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]
