[project]
name = "llm_e2e"
version = "0.1.0"
description = "End-to-end LLM training and inference pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jim Singh"}
]
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.32.3",
    "jupyterlab>=4.4.3",
    "llama-cpp-python>=0.3.9",
    "nbconvert>=7.16.6",
    "opt-einsum>=3.4.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
    "rich-cli>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_e2e"]
