[project]
name = "llm_e2e"
version = "0.1.0"
description = "End-to-end LLM training and inference pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jim Singh"}
]
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "tiktoken>=0.9.0",
    "torch>=2.8.0.dev",
    "torchaudio>=2.6.0.dev",
    "torchvision>=0.21.0.dev",
    "pytorch-triton>=3.3.0.dev",
    "wandb>=0.20.1",
    "jupyter>=1.1.1",
    "tensorflow>=2.19.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "evaluate>=0.4.3",
]

[tool.uv.sources]
torch = { index = 'pytorch' }
torchaudio = { index = 'pytorch' }
torchvision = { index = 'pytorch' }
pytorch-triton = { index = 'pytorch' } 

[[tool.uv.index]]
name = 'pypi'
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = 'pytorch'
url = "https://download.pytorch.org/whl/nightly/cu128"
explit = true
default = true

[tool.uv.pip]
extra-index-url = [ "https://download.pytorch.org/whl/nightly/cu128" ]

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
    "pytest>=8.4.0",
]

[tool.poe.tasks.register-kernel]
cmd = """
python -m ipykernel install
	--user --name='llm-e2e'
	--display-name='Python (llm-e2e)'
"""

